# rusqlite-es

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
db/: init.sql
src/: cqrs.rs  error.rs  event_repository.rs  lib.rs  testing.rs  view_repository.rs
tests/: lib.rs
